--- a/kitty.conf
+++ b/kitty.conf
@@ -1,10 +1,13 @@
 # for dynamically adjusting colorscheme
 # include nvim_export.conf
 
+background #191110
+foreground #c8baa4
+
 # font_size        16.0
 font_size        20.0
 
-adjust_line_height 30
+adjust_line_height 34
 adjust_cell_width 90%
 box_drawing_scale 0.001, 1, 1.5, 2
 
@@ -64,8 +67,24 @@ enabled_layouts *
 # Tabs
 tab_bar_edge top
 # tab_separator " ┇"
-tab_bar_style powerline
+# tab_bar_style powerline
+tab_bar_style slant
 # hide_window_decorations no
+# tab_bar_margin_height 0 7.5 
+tab_bar_align left
+tab_title_max_lengt 27
+
+tab_title_template              "{index} {title[title.rfind('/')+1:]}"
+active_tab_title_template  "{title[title.rfind('/')+1:]}"
+
+active_tab_font_style         normal
+
+tab_bar_background           #312121
+inactive_tab_background   #312121
+inactive_tab_foreground    #563939
+active_tab_background      #6e4949
+active_tab_foreground       #d08b65
+
 
 # Shell
 shell .
