added layouts split,stack... all you need

--- a/kitty.conf
+++ b/kitty.conf
@@ -62,7 +62,9 @@ initial_window_height  800
 # background_opacity 1
 
 # Layouts
-enabled_layouts *
+enabled_layouts splits,stack
+# enabled_layouts         grid,tall:bias=50;full_size=2, *
+# enabled_layouts vertical,horizontal
 
 # Tabs
 tab_bar_edge top
@@ -142,10 +144,10 @@ map alt+9 goto_tab 9
 map alt+z toggle_layout stack
 
 # Split horizontally (top-bottom)
-map alt+= launch --location=hsplit
+map alt+- launch --location=hsplit
 
 # Split vertically (left-right)
-map alt+- launch --location=vsplit
+map alt+= launch --location=vsplit
 
 
 map alt+w neighboring_window up
