[squash] changed colors

--- a/kitty.conf
+++ b/kitty.conf
@@ -63,14 +63,12 @@ initial_window_height  800
 
 # Layouts
 enabled_layouts splits,stack
-# enabled_layouts         grid,tall:bias=50;full_size=2, *
-# enabled_layouts vertical,horizontal
 
 # Tabs
 tab_bar_edge top
 # tab_separator " ┇"
-# tab_bar_style powerline
-tab_bar_style slant
+tab_bar_style powerline
+# tab_bar_style slant
 # hide_window_decorations no
 # tab_bar_margin_height 0 7.5 
 tab_bar_align left
@@ -81,11 +79,11 @@ active_tab_title_template  "{title[title.rfind('/')+1:]}"
 
 active_tab_font_style         normal
 
-tab_bar_background           #312121
-inactive_tab_background   #312121
+tab_bar_background           #322220
+inactive_tab_background   #322220
 inactive_tab_foreground    #563939
-active_tab_background      #6e4949
-active_tab_foreground       #d08b65
+active_tab_background      #4b3330
+active_tab_foreground       #bf616a
 
 
 # Shell
@@ -162,17 +160,17 @@ map alt+k resize_window taller
 map alt+j resize_window shorter
 
 resize_step_lines 2
-resize_step_columns 4
+resize_step_columns 2
 
 # Enable borders between splits
 draw_borders yes
 
 draw_minimal_borders yes
 # Border color (choose something visible against your background)
-active_border_color   #00ff00
-inactive_border_color #484848
+active_border_color   #bf616a
+inactive_border_color #3d2929
 
 # Border style: "single", "double", "round", or "thick"
-border_style single
+border_style round
 
 
