system specific font size and line height

--- a/kitty.conf
+++ b/kitty.conf
@@ -4,10 +4,9 @@
 background #191110
 foreground #c8baa4
 
-# font_size        16.0
-font_size        20.0
+# system specific font_size and line_height
+include ${KITTY_OS}.conf
 
-adjust_line_height 34
 adjust_cell_width 90%
 box_drawing_scale 0.001, 1, 1.5, 2
 
